Comentarios y algunos fix
